--- a/styles/architect.css
+++ b/styles/architect.css
@@ -25,11 +25,40 @@
 .text-lightgray{
     color: #727272;
 }
+
+.text-primary{
+    color: rgba(255, 144, 14, 1);
+}
+
+.btn-primary{
+    padding: 20px 25px;
+    color: white;
+    font-weight: 600;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    background-color: rgba(255, 144, 14, 1);
+    border: none;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main> section{
+    margin-top: 130px;
+}
 /* header style */
 
 /* navbar related style */
 .navbar{
     justify-content: space-between;
+    align-items: center;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 2.8rem;
 }
 
 .nav-item{
@@ -41,4 +70,66 @@
     text-decoration: none;
     font-weight: 500;
     font-size: 18px;
+}
+
+.navbar, .bannar{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* Bnnar related style */
+.bannar-content{
+    max-width: 868px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.bannar-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.bannar-img{
+    width: 100%;
+}
+
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 73px;
+    max-width: 537px;
+}
+
+.feature-title{
+    font-weight: 700;
+    font-size: 2.81rem;
+}
+
+#Quick-list{
+    font-weight: 500;
+}
+
+/* responsive media quary */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links, .teams {
+        flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
 }
