--- a/styles/architect.css
+++ b/styles/architect.css
@@ -120,6 +120,44 @@ main> section{
     font-weight: 500;
 }
 
+/* features we enjoy */
+.feature-enjoy{
+    gap: 140px;
+}
+
+.feature-enjoy .section-title{
+    border-left: 5px solid rgba(255, 144, 14, 1);
+    padding: 21px;
+}
+
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.feature-card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+
+#experience-btn{
+    padding: 46px 42px;
+    font-weight: 500;
+    font-size: 1.52rem;
+    margin-top: -123px;
+    margin-left: -92px;
+}
+
+#experience-yr{
+    font-weight: 700;
+    font-size: 4.02rem;
+}
+
 /* some fact card related style */
 .fact-discription{
     max-width: 542px;
@@ -172,9 +210,24 @@ main> section{
     filter: grayscale(100%);
 }
 
-/* responsive media quary */
+/* footer related style */
+footer{
+    max-width: 1440px;
+    margin: 130px auto 60px;
+    background-color: rgba(255, 244, 231, 1);
+    border-radius: 8px;
+}
+
+.footer-info{
+    padding: 39px 410px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 1.25rem;
+}
+
+/* responsive for small device */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links, .teams {
+    .navbar, .nav-links, .teams, .feature-enjoy {
         flex-direction: column;
     }
 
@@ -195,12 +248,25 @@ main> section{
         gap: 40px;
         justify-items: center;
     }
+
+    #experience-btn{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    .feature-architect img{
+        width: 100%;
+    }
+
+    .footer-info{
+        padding: 39px 10px;
+    }
 }
 
 /* responsive for medium device */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .feature-enjoy{
         flex-direction: column;
     }
 
@@ -212,5 +278,18 @@ main> section{
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         gap: 50px;
+    }
+
+    #experience-btn{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    .feature-architect img{
+        width: 100%;
+    }
+
+    .footer-info{
+        padding: 39px 10px;
     }
 }
